@@ -1,5 +1,6 @@
 Changes of tre-0.3 relative to tre-0.1:
   * PROPERTY-NAME: New JavaScript function.
+  * PROPERTY-REMOVE: New JavaScript codegen macro.
   * NEW returns an empty JavaScript object when used without
     arguments.
 
